[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "code_tokenize"
version = "v0.2.1"
description = "Fast program tokenization and structural analysis in Python"
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE.txt" }
keywords = ["code", "tokenization", "tokenize", "program", "language processing"]

authors = [{name = "Cedric Richter", email = "cedricr.upb@gmail.com"}]
maintainers = [{name = "Cedric Richter", email = "cedricr.upb@gmail.com"}]

classifiers = [
    "Development Status :: 3 - Alpha",    
    "Intended Audience :: Developers",  
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
  ]

dependencies = ["tree_sitter", "GitPython", "requests", "code_ast"]

[project.urls]
"Homepage" = "https://github.com/cedricrupb/code_tokenize"
"Bug Reports" = "https://github.com/cedricrupb/code_tokenize/issues"
"Source" = "https://github.com/cedricrupb/code_tokenize"